<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
>

    <ImageView
        android:id="@+id/listIcon"
        android:layout_width="106dp"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/zero" />

    <TextView
        android:id="@+id/listText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/Zero"
        android:textSize="24dp" />

    <Space
        android:layout_width="69dp"
        android:layout_height="45dp"
        android:layout_weight="1" />

    <Button
        android:id="@+id/minusBut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/minus" />

    <Button
        android:id="@+id/plusBut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/plus" />

</LinearLayout>