<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MM_bottom">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">


                <TextView
                    android:id="@+id/CardsInDeck"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/deckNumText"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/CardNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/Zero"
                    android:textSize="24sp" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_weight="1" />

            <Button
                android:id="@+id/playBut"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Play" />
        </LinearLayout>
    </LinearLayout>
</FrameLayout>